@@ -13,6 +13,8 @@ REST API
 --------
 
 * API version has been upgraded to 1.4
+* URI "/instances/.../file" can return DICOMweb JSON or XML, depending
+  on the content of the "Accept" HTTP header
 * New URI "/tools/metrics" to dynamically enable/disable the collection of metrics
 * New URI "/tools/metrics-prometheus" to retrieve metrics using Prometheus text format
 * URI "/peers?expand" provides more information about the peers
